[package]
name = "export-wp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
mysql = "25.0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
simplelog = "0.12.2"
