[package]
name = "killer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
mysql = "25.0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
simplelog = "0.12.2"
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_22"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = "0.3"
ammonia = "4.0.0"
anyhow = "1.0.94"
base64 = "0.22.1"
url = "2.5.4"
regex = "1.11.1"
mockall = "0.13.1"
mockito = "1.6.1"
clap = { version = "4.5.31", features = ["derive"] }
pretty_assertions = "1.4.1"
lazy_static = "1.5.0"
rand = "0.9.1"

